# movielens-mini-recsys

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_eda.ipynb.ipynb  02_baselines.ipynb  03_matrix_factorization.ipynb  04_demo_hour5.ipynb  05_build_ranking_dataset.ipynb  06_train_lgbm_ranker.ipynb  07_two_stage_demo.ipynb  08_offline_evaluation.ipynb
recommender/: baselines.py  data.py  eval.py  features.py  ranker.py  recommend.py  svd_model.py  two_stage.py
