[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "movielens-mini-recsys"
version = "0.1.0"
description = "Mini MovieLens recommendation system"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
# We'll control package discovery manually

[tool.setuptools.packages.find]
# Only treat the `recommender` folder as a package
include = ["recommender"]
